<resources>
    <string name="app_name">Anything</string>

    <string name="toggle_button">Toggle Button</string>
    <string name="toggle_turn_on">Turn On</string>
    <string name="toggle_turn_off">Turn Off</string>
    <string name="btn_display">Display</string>

    <string name="edit_text">Edit Text</string>
    <string name="enter_text">Type your text here</string>
    <string name="initial_text">This text can be edited</string>

    <string name="spinner">Spinner</string>
    <string name="select_celebrity">Select a Celebrity from the Dropdown List</string>
    
    <string name="auto_complete">Auto Complete</string>
    <string name="autocomplete_static_enter_text">[Static] Type your text here</string>
    <string name="autocomplete_dynamic_enter_text">[Dynamic] Type your text here</string>
    <string name="autocomplete_runtime_enter_text">[Runtime] Type your text here</string>

    <string name="menu_red">Red</string>
    <string name="menu_green">Green</string>
    <string name="menu_blue">Blue</string>

    <string name="popup_menu">Popup Menu</string>

    <string name="drag_text">Drag Me</string>
</resources>
