<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Radio Button Example"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Excellent " />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Satisfactory" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Below Average" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clearBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClear"
                android:text="Clear " />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onSubmit"
                android:text="Submit" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="Drag and Drop" />

        <LinearLayout
            android:id="@+id/pinkLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF8989"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drag_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/yellowLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="60dp"
            android:background="#FFCC00"
            android:orientation="vertical"></LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="Background Image" />

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/power_button" />

        <TextView
            android:id="@+id/textViewBackgroundImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Background image from java" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="Long Press" />

        <Button
            android:id="@+id/buttonLongPress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/popup_menu" />

        <Button
            android:id="@+id/buttonPopupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toggle_button" />

        <ToggleButton
            android:id="@+id/toggleButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/toggleButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textOff="@string/toggle_turn_off"
            android:textOn="@string/toggle_turn_on" />

        <Button
            android:id="@+id/btnToggleButtonDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/edit_text" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoText="true"
            android:hint="@string/enter_text"
            android:inputType="text"
            android:text="@string/initial_text" />

        <Button
            android:id="@+id/btnEditTextDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_display" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/spinner" />

        <TextView
            android:id="@+id/textViewSpinner1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_celebrity" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/auto_complete" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/autocomplete_static_enter_text" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/autocomplete_runtime_enter_text">

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Button" />

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="AutoCompleteTextView"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autocomplete_dynamic_enter_text"
            android:textSize="18dp" />

    </LinearLayout>
</ScrollView>