<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/redMenu"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:title="@string/menu_red" />
        <item
            android:id="@+id/greenMenu"
            android:orderInCategory="2"
            app:showAsAction="never"
            android:title="@string/menu_green" />
        <item
            android:id="@+id/blueMenu"
            android:orderInCategory="3"
            app:showAsAction="never"
            android:title="@string/menu_blue" />
    </group>
</menu>